--- a/style.css
+++ b/style.css
@@ -22,7 +22,11 @@ body {
         scroll-behavior: smooth; 
       }
 
-  /* Navigation */   
+  /* Navigation */  
+  .container-nav {
+    max-width: inherit;
+  } 
+
   .nav-list {
     display: flex;
     justify-content: center;
@@ -83,11 +87,19 @@ body {
     justify-content: center;
     border-bottom: 1px solid black;
 }
+
  .section-title-y {
     display: flex;
     flex-direction: column;
     justify-content: center;
  }
+
+ h1 {
+    font-size: 45px;
+    color: #000000;
+    /* margin-bottom: 25px; */
+ }
+
   /* Summary */
   .about {
     font-style: normal;
@@ -96,6 +108,11 @@ body {
     line-height: 24px;
     color: #000;
     width: 75%;
+  }
+
+  /* Project */
+  .section-project {
+    border-bottom: 1px solid black;
   }
 
   /* Footer */
